# snake_console

./: .gitignore  CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt  example.cpp
scripts/: build.py
src/: CMakeLists.txt  game_controller.cpp  game_controller.h  game_model.cpp  game_model.h  game_view.cpp  game_view.h  main.cpp  src.cpp
tests/: CMakeLists.txt  test.cpp
